--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,60 @@
 /* This is a multi-line
 comment. Add your CSS code
 from Unit 1 - 5 below  */
+h1{
+	color:rgb(2, 132, 130);
+}
+h2{
+	color:#ffd700;
+}
+
+body{
+	text-align:center;
+}
+
+.board{
+	height:50%;
+	width:50%;
+	display:inline-block;
+}
+
+.card{
+	height:200px;
+	width:100px;
+	border: solid black 1px;
+	background: #FFFF00;
+	border-radius: 20px;
+	float:left;
+	margin:8%;
+}
+
+.name{
+	color:#ff0000;
+}
+
+nav{
+	background-color:##808080;
+	width:100%;
+
+}
+
+a{
+	background-color:#ffbf00;
+	color:white;
+	padding:35px;
+	display:block;
+	float:left;
+}
+
+a:hover{
+	background-color:#ee5f3c;
+}
+
+.clearfix:after {
+   visibility: hidden;
+   display: block;
+   content: " ";
+   clear: both;
+   height: 0;
+   font-size: 0;
+ }
